# ai-agents-masterclass

./: README.md
.claude/: settings.local.json
chatbot-agent/: ai-memory.db  ai-memory.db-shm  ai-memory.db-wal  chatbot-memory.db  display_utils.py  dummy-agent.ipynb  main.py  pyproject.toml
concept-of-langgraph/: langgraph.json  main.ipynb  main.py  memory.db-shm  memory.db-wal  pyproject.toml
concept-of-langgraph/.langgraph_api/: .langgraph_ops.pckl
content-pipeline-agent/: crewai_flow.html  main.py  seo_crew.py  tools.py  virality_crew.py
customer-support-agent/: customer-support-memory.db  input_guardrails.py  main.py  models.py  output_guardrails.py  tools.py
customer-support-agent/my_agents/: account_agent.py  billing_agent.py  order_agent.py  technical_agent.py  triage_agent.py
deep-research-agent/: deep-research-team.ipynb  email-optimizer-team.ipynb  main.py  report.md  tools.py
job-hunter-agent/: main.py  models.py  tools.py
job-hunter-agent/output/: company_research.md  interview_prep.md  rewritten_resume.md
my-first-agent/: main.ipynb  pyproject.toml
news-reader-agent/: main.py  pyproject.toml  tools.py
news-reader-agent/config/: agents.yaml  tasks.yaml
news-reader-agent/output/: content_harvest.md  final_report.md  summary.md
testing-agents/: main.py  pyproject.toml
workflow-architectures/: main.ipynb  pyproject.toml
youtube-thumbnail-maker-agent/: download_youtube_video.py  graph.py  langgraph.json  main.ipynb  main.py  pyproject.toml
youtube-thumbnail-maker-agent/.langgraph_api/: .langgraph_checkpoint.1.pckl  (+3 more)
